==> ubuntu13/myflow/src/dcmi.c <==
#include "mavlink_bridge_header.h"
#include <mavlink.h>
#include "utils.h"
#include "settings.h"
#include "dcmi.h"
#include "led.h"

void DCMI_IRQHandler(void)
{
	static uint16_t i = 0;

	if (__HAL_DCMI_GET_IT_SOURCE(&DCMI_Handle, DCMI_IT_LINE) != RESET)
	{
		__HAL_DCMI_CLEAR_FLAG(&DCMI_Handle, DCMI_IT_LINE);
	}

	if (__HAL_DCMI_GET_IT_SOURCE(&DCMI_Handle, DCMI_IT_FRAME) != RESET)
	{
		__HAL_DCMI_CLEAR_FLAG(&DCMI_Handle, DCMI_IT_FRAME);
		i++;
		if(i == 1)
		{
			i = 0;
			LEDToggle(3);
		}
	}

	if (__HAL_DCMI_GET_IT_SOURCE(&DCMI_Handle, DCMI_IT_VSYNC) != RESET)
	{
		__HAL_DCMI_CLEAR_FLAG(&DCMI_Handle, DCMI_IT_VSYNC);
	}

	return;
}

void DMA2_Stream1_IRQHandler(void)
{
	/* transfer completed */
	if (__HAL_DMA_GET_FLAG(DCMI_Handle.DMA_Handle, DMA_FLAG_TCIF1_5) != RESET)
	{
		__HAL_DMA_CLEAR_FLAG(DCMI_Handle.DMA_Handle, DMA_FLAG_TCIF1_5);
		frame_counter++;

		if(global_data.param[PARAM_VIDEO_ONLY])
		{
			if (frame_counter >= 4)
			{
				dcmi_dma_disable();
				calibration_used = ((DCMI_Handle.DMA_Handle->Instance->CR) & DMA_SxCR_CT);
				calibration_unused = dcmi_image_buffer_unused;
				calibration_mem0 = dcmi_image_buffer_memory0;
				calibration_mem1 = dcmi_image_buffer_memory1;
			}
		}

		return;
	}

	/* transfer half completed
	 *
	 * We use three buffers and switch the buffers if dma transfer
	 * is in half state.
	 */
	if (__HAL_DMA_GET_FLAG(DCMI_Handle.DMA_Handle, DMA_FLAG_HTIF1_5) != RESET)
	{
		__HAL_DMA_CLEAR_FLAG(DCMI_Handle.DMA_Handle, DMA_FLAG_HTIF1_5);
	}

	dma_swap_buffers();
}

void dma_swap_buffers(void)
{
	/* check which buffer is in use */
	if ((DCMI_Handle.DMA_Handle->Instance->CR) & DMA_SxCR_CT)
	{
		/* swap dcmi image buffer */
		if (dcmi_image_buffer_unused == 1)
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_1, MEMORY0);
		else if (dcmi_image_buffer_unused == 2)
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_2, MEMORY0);
		else
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_3, MEMORY0);

		int tmp_buffer = dcmi_image_buffer_memory0;
		dcmi_image_buffer_memory0 = dcmi_image_buffer_unused;
		dcmi_image_buffer_unused = tmp_buffer;
	}
	else
	{
		/* swap dcmi image buffer */
		if (dcmi_image_buffer_unused == 1)
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_1, MEMORY1);
		else if (dcmi_image_buffer_unused == 2)
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_2, MEMORY1);
		else
			HAL_DMAEx_ChangeMemory(DCMI_Handle.DMA_Handle, (uint32_t) dcmi_image_buffer_8bit_3, MEMORY1);

		int tmp_buffer = dcmi_image_buffer_memory1;
		dcmi_image_buffer_memory1 = dcmi_image_buffer_unused;
		dcmi_image_buffer_unused = tmp_buffer;
	}

	/* set next time_between_images */
	//cycle_time = get_boot_time_us() - time_last_frame;
	//time_last_frame = get_boot_time_us();

	if(image_counter) // image was not fetched jet
	{
		time_between_next_images = time_between_next_images + cycle_time;
	}
	else
	{
		time_between_next_images = cycle_time;
	}

	/* set new image true and increment frame counter*/
	image_counter += 1;

	return;
}

void dcmi_it_init()
{
	HAL_NVIC_SetPriority(DCMI_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(DCMI_IRQn);

	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_FRAME);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_VSYNC);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_LINE);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_OVF);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_ERR);

}

void dma_it_init()
{
	HAL_NVIC_SetPriority(DMA2_Stream1_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(DMA2_Stream1_IRQn);

	//__HAL_DMA_ENABLE_IT(DCMI_Handle.DMA_Handle, DMA_IT_HT); // half transfer interrupt
	//__HAL_DMA_ENABLE_IT(DCMI_Handle.DMA_Handle, DMA_IT_TC); // transfer complete interrupt
}

void dcmi_dma_enable()
{
	/* Enable DMA2 stream 1 and DCMI interface then start image capture */
	//__HAL_DMA_ENABLE(DCMI_Handle.DMA_Handle);
	__HAL_DCMI_ENABLE(&DCMI_Handle);
	DCMI->CR |= (uint32_t)DCMI_CR_CAPTURE;
	//dma_it_init();
	dcmi_it_init();
}

void dcmi_dma_disable()
{
	/* Disable DMA2 stream 1 and DCMI interface then stop image capture */
	HAL_DCMI_Stop(&DCMI_Handle);
}

void dcmi_clock_init()
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* TIM3 clock enable */
	__HAL_RCC_TIM3_CLK_ENABLE();

	/* GPIOC clock enable */
	__HAL_RCC_GPIOC_CLK_ENABLE();

	/* GPIOC Configuration:  TIM3 CH3 (PC8)  */
	GPIO_InitStructure.Pin = GPIO_PIN_8;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
	GPIO_InitStructure.Pull = GPIO_PULLUP;
	GPIO_InitStructure.Alternate = GPIO_AF2_TIM3;
	HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);

	/* Time base configuration */
	TIM_Handle.Instance = TIM3;
	TIM_Handle.Init.Period = 3;
	TIM_Handle.Init.Prescaler = 0;
	TIM_Handle.Init.ClockDivision = 0;
	TIM_Handle.Init.CounterMode = TIM_COUNTERMODE_UP;
	HAL_TIM_Base_Init(&TIM_Handle);

	/* PWM1 Mode configuration: Channel3 */
	HAL_TIM_PWM_Init(&TIM_Handle);
	TIM3_OC3_Init.OCMode = TIM_OCMODE_PWM1;
	TIM3_OC3_Init.OCPolarity = TIM_OCPOLARITY_HIGH;
	TIM3_OC3_Init.Pulse = 2;

	HAL_TIM_PWM_ConfigChannel(&TIM_Handle, &TIM3_OC3_Init, TIM_CHANNEL_3);

	/* TIM3 enable counter */
	__HAL_TIM_ENABLE(&TIM_Handle);
}

void dcmi_dma_init(uint16_t buffer_size)
{
	reset_frame_counter();

	/* DCMI configuration */
	DCMI_Handle.Instance = DCMI;
	DCMI_Handle.Init.SynchroMode = DCMI_SYNCHRO_HARDWARE;

	DCMI_Handle.Init.PCKPolarity = DCMI_PCKPOLARITY_FALLING;
	//DCMI_Handle.Init.PCKPolarity = DCMI_PCKPOLARITY_RISING;

	DCMI_Handle.Init.VSPolarity = DCMI_VSPOLARITY_HIGH;
	//DCMI_Handle.Init.VSPolarity = DCMI_VSPOLARITY_LOW;

	DCMI_Handle.Init.HSPolarity = DCMI_HSPOLARITY_HIGH;
	//DCMI_Handle.Init.HSPolarity = DCMI_HSPOLARITY_LOW;

	DCMI_Handle.Init.CaptureRate = DCMI_CR_ALL_FRAME;
	DCMI_Handle.Init.ExtendedDataMode = DCMI_EXTEND_DATA_8B;

	/* DCMI configuration */
	HAL_DCMI_Init(&DCMI_Handle);

	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_FRAME);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_VSYNC);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_LINE);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_OVF);
	__HAL_DCMI_ENABLE_IT(&DCMI_Handle, DCMI_IT_ERR);

	/* Configures the DMA2 to transfer Data from DCMI */
	/* Enable DMA2 clock */
	__HAL_RCC_DMA2_CLK_ENABLE();

	/* DMA2 Stream1 Configuration */
	__HAL_LINKDMA(&DCMI_Handle, DMA_Handle, DMA2_Handle);

	DCMI_Handle.DMA_Handle->Instance = DMA2_Stream1;
	HAL_DMA_DeInit(DCMI_Handle.DMA_Handle);
	DCMI_Handle.DMA_Handle->Init.Channel = DMA_CHANNEL_1;
	DCMI_Handle.DMA_Handle->Init.Direction = DMA_PERIPH_TO_MEMORY;
	DCMI_Handle.DMA_Handle->Init.PeriphInc = DMA_PINC_DISABLE;
	DCMI_Handle.DMA_Handle->Init.MemInc = DMA_MINC_ENABLE;
	DCMI_Handle.DMA_Handle->Init.PeriphDataAlignment = DMA_PDATAALIGN_WORD;
	DCMI_Handle.DMA_Handle->Init.MemDataAlignment = DMA_MDATAALIGN_WORD;
	DCMI_Handle.DMA_Handle->Init.Mode = DMA_CIRCULAR;
	DCMI_Handle.DMA_Handle->Init.Priority = DMA_PRIORITY_HIGH;
	DCMI_Handle.DMA_Handle->Init.FIFOMode = DMA_FIFOMODE_ENABLE;
	DCMI_Handle.DMA_Handle->Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
	DCMI_Handle.DMA_Handle->Init.MemBurst = DMA_MBURST_SINGLE;
	DCMI_Handle.DMA_Handle->Init.PeriphBurst = DMA_PBURST_SINGLE;

	/* DMA2 IRQ channel Configuration */
	HAL_DMA_Init(DCMI_Handle.DMA_Handle);

	__HAL_UNLOCK(DCMI_Handle.DMA_Handle);

	/* DMA start */
	HAL_DMAEx_MultiBufferStart_IT(\
			DCMI_Handle.DMA_Handle,\
			(uint32_t)&DCMI->DR,\
			(uint32_t) dcmi_image_buffer_8bit_1,\
			(uint32_t) dcmi_image_buffer_8bit_2,\
			buffer_size / 4);

	HAL_NVIC_SetPriority(DMA2_Stream1_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(DMA2_Stream1_IRQn);

	//__HAL_DMA_ENABLE_IT(DCMI_Handle.DMA_Handle, DMA_IT_TC);
	//HAL_DMA_Start_IT(DCMI_Handle.DMA_Handle, DCMI->DR, (uint32_t) dcmi_image_buffer_8bit_1, buffer_size / 4);
}
